<?xml version="1.0"?>
<package>
  <name>consai</name>
  <version>0.0.0</version>
  <description>The consai meta package</description>

  <maintainer email="fujii.shohei@gmail.com">Shohei Fujii</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>consai_msgs</build_depend>
  <build_depend>ai_core</build_depend>
  <build_depend>avoiding_point_generator</build_depend>
  <build_depend>behavior_tree_visualizer</build_depend>
  <build_depend>decision_making</build_depend>
  <build_depend>grsim_wrapper</build_depend>
  <build_depend>launch_manager</build_depend>
  <build_depend>pi_trees</build_depend>
  <build_depend>real_sender</build_depend>
  <build_depend>sai_visualizer</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>ssl_joystick_operation</build_depend>
  <build_depend>ssl_refbox_wrapper</build_depend>
  <build_depend>trapezoidal_control</build_depend>
  <build_depend>world_observer</build_depend>
  <build_depend>xdot</build_depend>
  <export>
    <metapackage/>
  </export>
</package>
